feat: agregar el reporte semanal
